# DKV-Client

./: .gitignore  CMakeLists.txt
script/: startClient.bat
src/: main.cpp
src/api/: Endpoints.h  KeyValueApi.cpp  KeyValueApi.h
src/app/: App.cpp  App.h
src/cli/: CLIHandler.cpp  CLIHandler.h
src/config/: AppConfig.h
src/http/: HttpClient.cpp  HttpClient.h  HttpResponse.cpp  HttpResponse.h
tests/: CMakeLists.txt
tests/unit/: test_AppTest.cpp
